--- a/LFA.ipynb
+++ b/LFA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,26 +170,6 @@
     "estados = {'q0':q0,'q1':q1,'q2':q2,'q3':q3,'q4':q4}\n",
     "\n",
     "afd = AFD(estados,q0,['0','1'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'[q0, q1, q2, q3, q4]'"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "afd.str_estados_array(estados.values())"
    ]
   },
   {
@@ -216,21 +196,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Entrada rejeitada!\n",
-      "Estado final:  q0{'0': 'q1', '1': 'q2'}\n",
-      "q0{'0': 'q1', '1': 'q2'}\n"
+      "Entrada aceita!\n",
+      "Estado final:  q4{'0': 'q4', '1': 'q4'}\n",
+      "q4{'0': 'q4', '1': 'q4'}\n"
      ]
     }
    ],
    "source": [
-    "print(afd.entrada(''))"
+    "print(afd.entrada('01101101'))"
    ]
   },
   {
